--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,10 +11,11 @@ on:
 
 jobs:
   build:
-
+    #Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
 
     steps:
+    #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
     - uses: actions/checkout@v3
     - name: Set up JDK 18
       uses: actions/setup-java@v3
@@ -24,3 +25,16 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+  tests:
+    #Set up Maven cache
+    - name: Cache Maven packages
+      #This action allows caching dependencies and build outputs to improve workflow execution time.
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    #Run Tests
+    - name: Run Tests
+      run: mvn -B test
+  
