--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,15 +26,19 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
   tests:
-    #Set up Maven cache
-    - name: Cache Maven packages
-      #This action allows caching dependencies and build outputs to improve workflow execution time.
-      uses: actions/cache@v1
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-    #Run Tests
-    - name: Run Tests
-      run: mvn -B test
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+      #Set up Maven cache
+      - name: Cache Maven packages
+        #This action allows caching dependencies and build outputs to improve workflow execution time.
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      #Run Tests
+      - name: Run Tests
+        run: mvn -B test
   
