--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,5 +40,5 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       #Run Tests
       - name: Run Tests
-        run: mvn -B test
+        run: mvn -B test --file pom.xml
   
