--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,29 +16,28 @@ jobs:
 
     steps:
     #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
-    - uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
+      
     - name: Set up JDK 18
       uses: actions/setup-java@v3
       with:
         java-version: '18'
         distribution: 'temurin'
         cache: maven
+        
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-  tests:
+      
+    - name: Run Tests
+      run: mvn -B -Dmaven.test.failure.ignore=true test
   
-    runs-on: ubuntu-latest
-    
-    steps:
-      #Set up Maven cache
-      - name: Cache Maven packages
-        #This action allows caching dependencies and build outputs to improve workflow execution time.
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      #Run Tests
-      - name: Run Tests
-        run: mvn -B test --file pom.xml
+    - name: Report
+      uses: dorny/test-reporter@v1
+      if: always()
+      with:
+        name: Maven Tests
+        path: target/surefire-reports/*.xml
+        reporter: java-junit
+        fail-on-error: true
   
