--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,6 +67,8 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '18'
+          distribution: 'temurin'
+          cache: maven
           
       #Set up SonarCloud cache
       - name: Cache SonarCloud packages
