--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -137,3 +137,29 @@ jobs:
           name: artifact
           #From this path
           path: target/cicdemo-0.0.1-SNAPSHOT.jar
+
+  #Deploy's job
+  deploy:
+    #Depends on build's job
+    needs: build
+    name: Deploy
+    #Run on Ubuntu using the latest version
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download JAR
+        #Download the artifact which was uploaded in the build's job
+        uses: actions/download-artifact@v2
+        with:
+          name: artifact
+      #Deploy the artifact (JAR) into AWS Beanstalk
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          use_existing_version_if_available: false
+          application_name: spring-boot-cicd-demo
+          environment_name: Springbootcicddemo-env
+          version_label: ${{github.SHA}}
+          region: ap-southeast-1
+          deployment_package: cicdemo-0.0.1-SNAPSHOT.jar
