--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -157,7 +157,7 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          use_existing_version_if_available: false
+          use_existing_version_if_available: true
           application_name: spring-boot-cicd-demo
           environment_name: Springbootcicddemo-env
           version_label: ${{github.SHA}}
