--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -100,7 +100,7 @@ jobs:
     needs: sonar
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/maven@master
         env:
