--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -102,7 +102,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/maven@master
+        uses: snyk/darryl1975/DataRestController@main
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
