update yml code security sarif

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -158,7 +158,7 @@ jobs:
   #Deploy's job
   deploy:
     #Depends on build's job
-    needs: build
+    needs: code-security
     name: Deploy
     #Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
